# ugsmetadataserver

./: Cargo.toml  Dockerfile  LICENSE.md
src/: main.rs  models.rs
src/sql/: sql_connector.rs
src/web_apis/: build_api.rs  comment_api.rs  error_api.rs  event_api.rs  issuebuilds_api.rs  issues_api.rs  latest_api.rs  mod.rs  telemetry_api.rs  user_api.rs
